@@ -48,6 +48,8 @@ typedef TypedParameter<std::vector<int> > IntVectorParameter;
 typedef TypedParameter<std::vector<float> > FloatVectorParameter;
 typedef TypedParameter<std::vector<double> > DoubleVectorParameter;
 typedef TypedParameter<std::vector<std::string> > StringVectorParameter;
+typedef TypedParameter<std::vector<Imath::V2i> > V2iVectorParameter;
+typedef TypedParameter<std::vector<Imath::V3i> > V3iVectorParameter;
 typedef TypedParameter<std::vector<Imath::V2f> > V2fVectorParameter;
 typedef TypedParameter<std::vector<Imath::V3f> > V3fVectorParameter;
 typedef TypedParameter<std::vector<Imath::V2d> > V2dVectorParameter;
@@ -68,6 +70,8 @@ IE_CORE_DECLAREPTR( IntVectorParameter );
 IE_CORE_DECLAREPTR( FloatVectorParameter );
 IE_CORE_DECLAREPTR( DoubleVectorParameter );
 IE_CORE_DECLAREPTR( StringVectorParameter );
+IE_CORE_DECLAREPTR( V2iVectorParameter );
+IE_CORE_DECLAREPTR( V3iVectorParameter );
 IE_CORE_DECLAREPTR( V2fVectorParameter );
 IE_CORE_DECLAREPTR( V3fVectorParameter );
 IE_CORE_DECLAREPTR( V2dVectorParameter );
