@@ -142,6 +142,8 @@ void bindTypeId()
 		.value( "FloatVectorParameter", FloatVectorParameterTypeId )
 		.value( "DoubleVectorParameter", DoubleVectorParameterTypeId )
 		.value( "StringVectorParameter", StringVectorParameterTypeId )
+		.value( "V2iVectorParameter", V2iVectorParameterTypeId )
+		.value( "V3iVectorParameter", V3iVectorParameterTypeId )
 		.value( "V2fVectorParameter", V2fVectorParameterTypeId )
 		.value( "V3fVectorParameter", V3fVectorParameterTypeId )
 		.value( "V2dVectorParameter", V2dVectorParameterTypeId )
