@@ -58,6 +58,8 @@ adoptChildPresets argument to the constructor.
 
 * ToHoudiniGeometryConverter creates point and prim groups based on the blindData name, FromHoudiniGeometryConverter creates the blindData name based on prim group name, and To/FromHoudiniGroupConverters use their base classes to manipulate prim group names
 
+* Added V2iVectorParameter and V3iVectorParameter
+
 Bug Fixes :
 
 * ClassParameter.setClass() method was not taking advantage of a matching already loaded class if the searchPathEnvVar was None.
